--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site wide configuration
 
-title: Site Title
+title: PCG
 locale: en_US
-description: Describe your website here.
-logo: site-logo.png
+description: Petroleum Cybernetics Group
+logo: logo.png
 search: true
 url: http://localhost:4000
 
@@ -31,9 +31,9 @@ exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.
 
 # Site owner
 owner:
-  name: Your Name
+  name: Einar Baumann
   avatar: bio-photo.jpg
-  email: you@email.com
+  email: einar.baumann@gmail.com
   disqus-shortname:
   twitter: #username
   facebook: #username
