--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,17 +3,26 @@
 - title: About
   url: /about/
 
+- title: Research
+  url: /research/
+
+- title: People
+  url: /people/
+
 - title: Articles
   url: /articles/
 
 - title: Blog
   url: /blog/
 
-- title: Theme Setup
-  url: /theme-setup/
+- title: FieldOpt
+  url: /fieldopt/
 
-- title: Made Mistakes
-  url: http://mademistakes.com
+# - title: Theme Setup
+#   url: /theme-setup/
+
+# - title: Made Mistakes
+#   url: http://mademistakes.com
 
 - title: Search
   url: /search/
